--- a/index.html
+++ b/index.html
@@ -3,9 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="sur.css">
     <title>Document</title>
 </head>
 <body>
+    <center>
     <h1>HELLO GITHUB</h1>
+    <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="">
+    <h2>todey i studied such console coomends:</h2>
+    <div>
+        <ul>
+            <li>jfggj</li>
+            <li>kjhgf</li>
+            <li>ksdfjj</li>
+            <li>jjjj</li>
+            <li>uuuuuuuh</li>
+            <li>huu</li>
+
+        </ul>
+    </div>
+    <h2>And such git console commends:</h2>
+    <div>
+        <ul>
+            <li>jfggj</li>
+            <li>kjhgf</li>
+            <li>ksdfjj</li>
+           
+
+        </ul>
+    </div>
+</center>
 </body>
 </html>
